--- a/src/app/component/vouchers/vouchers/vouchers.component.css
+++ b/src/app/component/vouchers/vouchers/vouchers.component.css
@@ -54,8 +54,8 @@
 .copy-to-clipboard i {
   visibility: hidden;
   position: absolute;
-  color: #a01540;
-  left: 80px;
+  color: #A01540FF;
+  left: 82px;
   /*top: 50%;*/
   /*transform: translateY(-50%);*/
 }
@@ -66,7 +66,7 @@
 
 
 .btn-details:hover {
-  background-color: #a01540;
+  background-color: #A01540FF;
   color: white;
 }
 
