--- a/src/app/component/centers/center-new/center-new.component.html
+++ b/src/app/component/centers/center-new/center-new.component.html
@@ -1,8 +1,10 @@
 
 <ng-container *ngIf="(newCenterState$ | async) as state" [ngSwitch]="state.dataState">
+
+  <app-navbar [user]="state?.appData?.data?.user"></app-navbar>
+  <div style="margin-top: 90px"> </div>
+
   <ng-container *ngSwitchCase="DataState.LOADED">
-    <app-navbar [user]="state?.appData?.data?.user"></app-navbar>
-    <div style="margin-top: 100px"> </div>
     <section>
       <div class="container mt-4">
         <nav aria-label="breadcrumb">
@@ -150,5 +152,15 @@
         </div>
       </div>
     </section>
+  </ng-container>
+
+  <ng-container *ngSwitchCase="DataState.LOADING">
+    <mat-spinner></mat-spinner>
+  </ng-container>
+
+  <ng-container *ngSwitchCase="DataState.ERROR">
+    <ngb-alert [dismissible]="false" type="danger">
+      <strong>An unexpected error occurred. </strong> Please try again later.
+    </ngb-alert>
   </ng-container>
 </ng-container>
