--- a/src/app/component/leaderboard/leaderboard.component.html
+++ b/src/app/component/leaderboard/leaderboard.component.html
@@ -1,8 +1,10 @@
-<ng-container *ngIf="(leaderboardState$ | async) as state" [ngSwitch]="state.dataState"
-              xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
+<ng-container *ngIf="(leaderboardState$ | async) as state" [ngSwitch]="state.dataState" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
+
+  <app-navbar [user]="state?.appData?.data?.user"></app-navbar>
+  <div style="margin-top: 90px"></div>
+
+
   <ng-container *ngSwitchCase="DataState.LOADED">
-    <app-navbar [user]="state?.appData?.data?.user"></app-navbar>
-    <div style="margin-top: 90px"></div>
     <section class="container mt-4">
       <nav aria-label="breadcrumb" style="margin-top: 8px;">
         <ol class="breadcrumb">
@@ -119,5 +121,13 @@
         </ngb-pagination>
       </nav>
     </section>
+  </ng-container>
+
+  <ng-container *ngSwitchCase="DataState.ERROR">
+    <div class="container mt-4">
+      <ngb-alert [dismissible]="false" type="danger">
+        <strong>An unexpected error occurred. </strong> Please try again later.
+      </ngb-alert>
+    </div>
   </ng-container>
 </ng-container>
