--- a/src/app/component/centers/center-details/center-details.component.html
+++ b/src/app/component/centers/center-details/center-details.component.html
@@ -426,13 +426,17 @@
   </ng-container>
 
   <ng-container *ngSwitchCase="DataState.LOADING">
-    <mat-spinner></mat-spinner>
+    <div class="container mt-4">
+      <mat-spinner></mat-spinner>
+    </div>
   </ng-container>
 
   <ng-container *ngSwitchCase="DataState.ERROR">
-    <ngb-alert [dismissible]="false" type="danger">
-      <strong>An unexpected error occurred. </strong> Please try again later.
-    </ngb-alert>
+    <div class="container mt-4">
+      <ngb-alert [dismissible]="false" type="danger">
+        <strong>An unexpected error occurred. </strong> Please try again later.
+      </ngb-alert>
+    </div>
   </ng-container>
 
 </ng-container>
