--- a/src/app/component/auth/reset-pass/reset-pass.component.html
+++ b/src/app/component/auth/reset-pass/reset-pass.component.html
@@ -17,8 +17,8 @@
                 <label class="form-label">Email Address</label>
                 <input type="text" [disabled]="state.dataState === DataState.LOADING" ngModel name="email" class="form-control" required minlength="2">
               </div>
-              <div class="d-flex justify-content-center mb-4 btn-msg-color">
-                <button [disabled]="state.dataState === DataState.LOADING || resetPasswordForm.invalid || resetPasswordForm.pristine" type="submit" class="btn btn-primary">
+              <div class="d-flex justify-content-center mb-4">
+                <button [disabled]="state.dataState === DataState.LOADING || resetPasswordForm.invalid || resetPasswordForm.pristine" type="submit" class="btn btn-msg-color">
                   <span *ngIf="state.dataState === DataState.LOADING" class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="margin-right: 5px;"></span>
                   <span *ngIf="state.dataState === DataState.LOADING">Loading...</span>
                   <span *ngIf="!(state.dataState === DataState.LOADING)">Reset Password</span>
